# snowflake-cortex-service

./: .dockerignore  .env.example  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  main.py  pyproject.toml
.bmad-core/: install-manifest.yaml
.claude/: settings.json  settings.local.json
.github/workflows/: docker-publish.yml
examples/: demo.http
src/: api.py  hello.py  web.py
